--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,11 @@
 @import './global.scss';
 
+html {
+  margin: 0; 
+  padding: 0; 
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +18,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* Read more: https://kittygiraudel.com/snippets/sr-only-class/ */
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  margin: -1px !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important;
+}
+
+*:focus-visible {
+  outline: 4px solid $tabFocusBorderColor;
+  outline-width: 6px;
 }
