--- a/src/global.scss
+++ b/src/global.scss
@@ -1,5 +1,11 @@
+$success: rgb(186, 220, 143);
+$info: rgb(169, 211, 225);
+$warning: rgb(255, 210, 85);
+$danger: rgb(241, 113, 74);
+
 $primary: rgb(105, 135, 156);
 $bgColor: rgb(226, 230, 219);
+
 $tabFocusBorderColor: rgb(164, 164, 255);
 $marginSmall: .3rem;
 $borderRadiusSmall: .3rem;
