--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,12 +1,8 @@
 @import '../../global.scss';
 
 .button {
-  padding: .5em;
   margin: $marginSmall;
-  background-color: $primary;
-  color: lighten($bgColor, 15%);
-  font-weight: bold;
-  font-size: 1.3em;
+  padding: .5em;
   border: none;
   border-radius: $borderRadiusSmall;
   transition: all .07s ease-in-out;
@@ -14,12 +10,42 @@
   &:disabled {
     opacity: .5;
   }
-  &:hover {
-    background-color: lighten($primary, 6%);
-    color: white;
+  
+  &.primary {
+    background-color: $primary;
+    color: lighten($bgColor, 15%);
+    &:hover {
+      background-color: lighten($primary, 6%);
+      color: white;
+    }
+    &:active {
+      background-color: darken($primary, 1%);
+    }
   }
   
-  &:active {
-    background-color: darken($primary, 1%);
+  &.large {
+    font-weight: bold;
+    font-size: 1.3em;
+  }
+  
+  &.small {
+    padding: 0;
+    margin: 0;
+    font-size: 1.1em;
+  }
+  
+  &.small.icon {
+    background-color: rgba(255, 255, 255, 0.428);
+    width: 1.1em;
+    height: 1.1em;
+    color: currentColor;
+    font-weight: normal;
+    
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.655);
+    }
+    &:active {
+      background-color: rgba(255, 255, 255, 0.561);
+    }
   }
 }
