--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -11,7 +11,14 @@
   padding: 0.6em;
   margin: $marginSmall;
   font-size: 1em;
-  background-color: white;
-  border: none;
+  background-color: $white;
+  border: 1px solid darken($bgColor, 10%);
   border-radius: $borderRadiusSmall;
+  
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover, 
+  &:-webkit-autofill:focus, 
+  &:-webkit-autofill:active  {
+    box-shadow: 0 0 0 1000px $white inset;
+  }
 }
