--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,4 +1,8 @@
 form.wrapper {
   display: flex;
   flex-direction: column;
+  @media screen and (min-width: 650px) {
+    flex-direction: row;
+    align-items: flex-end;
+  }
 }
