Remove mouse events, add click on backdrop

--- a/src/components/Info/Info.module.scss
+++ b/src/components/Info/Info.module.scss
@@ -1,5 +1,14 @@
 @import '../../global.scss';
 
+.backdrop.open {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(233, 233, 233, 0.306);
+}
+
 .infoIcon {
   position: absolute;
   right: .8em;
@@ -10,6 +19,8 @@
   width: min-content;
   height: min-content;
   border-radius: 100%;
+  z-index: 2;
+  cursor: pointer;
   
   &:focus-within svg {
     outline: 5px solid $tabFocusBorderColor;
@@ -47,7 +58,8 @@
     color: $headerColor;
     border-radius: $borderRadiusSmall;
     border-top-right-radius: 0;
-  
+    cursor: pointer;
+    
     caption {
       text-align: left;
       margin: 14px 17px;
