--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -6,8 +6,7 @@
   width: 100%;
   .label {
     font-size: .8em;
-    margin-bottom: 0;
-    margin: $marginSmall;
+    margin: 0.45em;
     margin-bottom: 0;
   }
   
