--- a/src/components/WeatherListItem/WeatherListItem.module.scss
+++ b/src/components/WeatherListItem/WeatherListItem.module.scss
@@ -5,73 +5,55 @@
   transition: background-color .09s ease-in-out;
   cursor: pointer;
 
-  &:hover {
-    background-color: lighten($bgColor, 7%);
-  }
-  &:active {
-    background-color: lighten($bgColor, 8%);
-  }
+  border-radius: $borderRadiusSmall;
+  margin: 1em $marginSmall;
+  border: 1px solid lighten($bgColor, 20%);
+  @include drop-shadow(small);
 
-  &.main {
-    border-radius: $borderRadiusSmall;
-    margin: 1em $marginSmall;
-    border: 1px solid lighten($bgColor, 20%);
-    @include drop-shadow(small);
-
-    &:focus-within {
-      outline: 5px solid $tabFocusBorderColor;
-    }
-
-    .content {
+  .buttonWrapper {
+    opacity: 0.2;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    .button {
+      cursor: pointer;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1em;
-      
-      p {
-        margin: 0;
-        font-size: .9em;
-        font-weight: bold;
-      }
-      
-      .weather {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        min-width: 3.5em;
-      }
-      
-      .timeStamp {
-        font-size: 1.1em;
-        padding-left: .25em;
-      }
-      
-      .icon {
-        font-size: 2.5em;
-      }
-    }
-    
-    .sub {
-      background-color: lighten($bgColor, 3%);
-      border-top: 1px solid lighten($bgColor, 20%);
-      
-      p {
-        font-weight: normal;
-      }
-      
-      .content {
-        padding: .2em 1em;
-        
-        .timeStamp {
-          font-size: 1em;
-        }
-        .icon {
-          font-size: 2em;
-        }
+      justify-content: center;
+      background-color: transparent;
+      border: none;
+      width: fit-content;
+      margin: 0 auto;
+      padding: 0;
+      color: $tabFocusBorderColor;
+      outline: none;
+
+      svg {
+        font-size: 2em;
+        pointer-events: none;
       }
     }
   }
   
+  .content {
+    padding: 1em;
+  }
 
+  &:focus-within {
+    outline: 5px solid $tabFocusBorderColor;
+  }
+
+  &:hover {
+    background-color: lighten($bgColor, 7%);
+  }
+
+  &:hover,
+  &:focus-within {
+    .buttonWrapper {
+      opacity: 1;
+    }
+  }
+
+  &:active {
+    background-color: lighten($bgColor, 8%);
+  }
 }
